plugins/kotlin/idea/tests/testData/highlighterMetaInfo/unresolved/unresolvedKDocLinkWithSuppressedSamples.kt.highlighting
// FIR_IDENTICAL

// HIGHLIGHT_WARNINGS
// TOOL: org.jetbrains.kotlin.idea.codeInsight.inspections.kdoc.KDocUnresolvedReferenceInspection
// REGISTRY: kotlin.kdoc.should.report.samples false

class A {}

/**
 * [A]
 */
fun resolved() {}

/**
 * bar should be marked as unresolved, but A should not
 * [A.<!HIGHLIGHTING("severity='WARNING'; descr='Cannot resolve link 'bar''; textAttributesKey='WARNING_ATTRIBUTES'")!>bar<!>]
 */
fun partiallyResolved(){}

/**
 * [<!HIGHLIGHTING("severity='WARNING'; descr='Cannot resolve link 'unresolvedLink''; textAttributesKey='WARNING_ATTRIBUTES'")!>unresolvedLink<!>]
 */
fun unresolved() {}

/**
 * @sample samples
 * @sample someRandomName
 */
fun samples() {}
